--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -36,10 +36,25 @@
                 <td class="text-center">@item.RequisitionQuantity</td>
                 <td class="text-center" style="color:red">@item.AvailableQty</td>
                 @*<td class="text-center">@item.RequisitionQuantity</td>*@
-                <td class="text-center" style="width:10%">
-            <input type="number" class="issueQty form-control form-control-sm " value="@item.RequisitionQuantity"  />
-            <span class="error hide">Quantity must be <=available Quantity</span>
-        </td>
+                @if (item.AvailableQty <= item.IssueQuantity)
+                {
+
+
+                    <td class="text-center" style="width:10%">
+                        <input type="number" class="issueQty form-control form-control-sm " value="@item.RequisitionQuantity" />
+                        <span class="error">Quantity must be <=available Quantity</span>
+                    </td>
+
+                }
+                else
+                {
+
+                    <td class="text-center" style="width:10%">
+                        <input type="number" class="issueQty form-control form-control-sm " value="@item.RequisitionQuantity" />
+                        <span class="error hide">Quantity must be <=available Quantity</span>
+                    </td>
+                }
+
                 <td class="text-center">@item.Status</td>
                 <td class="text-center">@item.Remarks</td>
                 <td class="hide unitId">@item.UnitID</td>
