--- a/ERPWeb/Views/AgroConfiguration/_GetReturnReportListView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetReturnReportListView.cshtml
@@ -16,7 +16,7 @@
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Entry Date</th>
             <th style="vertical-align:middle">Raw Material Name</th>
-            <th style="vertical-align:middle">Unit Name</th>
+            <th style="vertical-align:middle">Quantity</th>
             <th style="vertical-align:middle">Return Type</th>
             <th style="vertical-align:middle">Status</th>
             
@@ -31,7 +31,7 @@
                 <td class="hide">@item.ReturnRawMaterialId</td>
                 <td class="text-center">@item.EntryDate.Value.ToString("yyyy-MMM-dd")</td>
                 <td class="text-center">@item.RawMaterialName</td>
-                <td class="text-center">@item.UnitName</td>
+                <td class="text-center">@item.Quantity</td>
                 <td class="text-center">@item.ReturnType</td>
                 <td class="text-center">@item.Status</td>
              
